fix(homepage): center align segments in grid

--- a/css/base.css
+++ b/css/base.css
@@ -76,3 +76,7 @@
 .table-bordered>tbody>tr>td, .table-bordered>tbody>tr>th, .table-bordered>tfoot>tr>td, .table-bordered>tfoot>tr>th, .table-bordered>thead>tr>td, .table-bordered>thead>tr>th {
     border: 2px solid #000 !important;
 }
+
+.homepage.main.container .grid .column .card {
+    display: inline-block !important;
+}
